Implemented the logic to allow multi-platform and multi-camera compatibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,8 +219,8 @@ endif()
 
 if(k4a_FOUND AND k4abt_FOUND AND k4arecord_FOUND AND NOT SKIP_KINECT_AZURE)
   add_plugin(hpe LIBS ${OpenCV_LIBS} ${PCL_LIBRARIES} common openvino::runtime Eigen3::Eigen k4a::k4a k4a::k4abt k4a::k4arecord )
-  target_compile_definitions(hpe PRIVATE KINECT_AZURE)
-  target_compile_definitions(hpe_main PRIVATE KINECT_AZURE)
+  target_compile_definitions(hpe PRIVATE KINECT_AZURE_LIBS)
+  target_compile_definitions(hpe_main PRIVATE KINECT_AZURE_LIBS)
 else()
   if(WIN32)
     add_plugin(hpe LIBS ${OpenCV_LIBS} ${PCL_LIBRARIES} common openvino::runtime Eigen3::Eigen)
